--- a/templates/index.html
+++ b/templates/index.html
@@ -516,7 +516,7 @@
           </li>
 
           <li class="menu-category">
-            <a href="#" class="menu-title">Blog</a>
+            <a href="{% url 'blog' %}" class="menu-title">Blog</a>
           </li>
 
           <li class="menu-category">
@@ -706,7 +706,7 @@
         </li>
 
         <li class="menu-category">
-          <a href="#" class="menu-title">Blog</a>
+          <a href="{% url 'blog' %}" class="menu-title">Blog</a>
         </li>
 
         <li class="menu-category">
