edited -> select_payment_method, cod, my_orders, checkout and also generated receipt of order, sending an email of order cancellation and confirmed

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -65,7 +65,7 @@
         
         <!-- Left side - Shipping form (takes 2 columns on desktop) -->
         <div class="lg:col-span-2">
-          <form method="POST" action="{% url 'select_payment_method' %}" class="space-y-6">
+          <form method="POST" action="{% url 'checkout' %}" class="space-y-6">
             {% csrf_token %}
             
             <!-- Shipping Information Card -->
